--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="card-img-overlay">
         <div class="center-text">
           <h2 class="card-title" style="color: white;">Yousuf Bhuiyan</h2>
-        <h2 class="card-title" style="color: rgb(12, 142, 41);">Full-Stack Developer</h2>
+        <h2 class="card-title" style="color: white;">Full-Stack Developer</h2>
         <h4 class="card-title" style="color: #fa8b03;">Android(java/kotlin), ios(Swift/Swift-UI), Flutter(Dart) and Node js(Express Js)</h4>
        
           <a href="#" class="btn">
