--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="center-text">
           <h2 class="card-title" style="color: white;">Yousuf Bhuiyan</h2>
         <h3 class="card-title" style="color: white;">Full-Stack Developer</h3>
-        <h4 class="card-title" style="color: #fa8b03;">Android(java/kotlin), ios(Swift/Swift-UI), Flutter(Dart) and Node js(Express Js)</h4>
+        <h3 class="card-title" style="color: #ed0767;">Android(java/kotlin), ios(Swift/Swift-UI), Flutter(Dart) and Node js(Express Js)</h3>
        
           <a href="#" class="btn">
             <svg width="201" height="51" viewBox="0 0 201 51">
