--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="center-text">
           <h2 class="card-title" style="color: white;">Yousuf Bhuiyan</h2>
         <h3 class="card-title" style="color: white;">Full-Stack Developer</h3>
-        <h3 class="card-title" style="color: #ed0767;">Android(java/kotlin), ios(Swift/Swift-UI), Flutter(Dart) and Node js(Express Js)</h3>
+        <h3 class="card-title" style="color: #ed0767;">Android(java/kotlin), iOS(Swift/Swift-UI), Flutter(Dart) and Node js(Express Js)</h3>
        
           <a href="#" class="btn">
             <svg width="201" height="51" viewBox="0 0 201 51">
@@ -79,7 +79,6 @@
       </div>
     </div>
   </div>
-
   <div class="container-fluid fh5co-recent-work">
     <div class="container contact-pop">
       <div class="row">
