--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="container contact-pop">
       <div class="row">
         <div class="col-md-6  pr-0">
-          <div class="card"> <img class="card-img w-100" style="height:500px;" src="assets/img/yousuf3.jpeg" alt="">
+          <div class="card"> <img class="card-img w-100" style="height:500px;" src="assets/img/yousuf5.png" alt="">
             <div class="card-img-overlay"> </div>
           </div>
         </div>
