--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="container recent">
     <div class="row">
       <h2 style="color: black;">Portfolios</h2>
-      <!-- recent work first row......start....................... -->
+      <!-- recent work first row......start............................ -->
       <div class="owl-carousel owl-carousel2 owl-theme">
         <div>
           <div class="card"> <img class="card-img"src="assets/img/rw_1.png" alt="">
