--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h3>This is Yousuf Bhuiyan</h3>
             <h5>Professional Android, ios, Flutter and Node js application Developer </h5>
             <hr />
-            <p>Dedicated and innovative Mobile App Developer with 7+ years of experience in designing, developing, and maintaining mobile applications for Android and iOS platforms. Proficient in various programming languages and tools, with a strong focus on user experience and performance optimization. Adept at working in fast-paced environments and collaborating with cross-functional teams to deliver high-quality applications that meet client needs.</p>
+            <p>I am dedicated and innovative Mobile App Developer with 7+ years of experience in designing, developing, and maintaining mobile applications for Android and iOS platforms. Proficient in various programming languages and tools, with a strong focus on user experience and performance optimization. Adept at working in fast-paced environments and collaborating with cross-functional teams to deliver high-quality applications that meet client needs.</p>
             <a href="#contact" class="btn">CONTACT</a> </div>
           </div>
         </div>
