--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li class="nav-item"> <a class="nav-link" href="#about" tabindex="-1" aria-disabled="true">About</a></li>
           <li class="nav-item"> <a class="nav-link" href="#services" tabindex="-1" aria-disabled="true">Services</a></li>
           <li class="nav-item"> <a class="nav-link" href="#portfolio" tabindex="-1" aria-disabled="true">Portfolio</a></li>
-          <li class="nav-item"> <a class="nav-link" href="#testimonial" tabindex="-1" aria-disabled="true">Testimonial</a></li>
+          <!-- <li class="nav-item"> <a class="nav-link" href="#testimonial" tabindex="-1" aria-disabled="true">Testimonial</a></li> -->
           <!-- <li class="nav-item"> <a class="nav-link" href="blog.html" tabindex="-1" aria-disabled="true">Blog</a></li> -->
           <li class="nav-item"> <a class="nav-link" href="#cv" tabindex="-1" aria-disabled="true">Curriculum Vitae (CV)</a></li>
           <li class="nav-item"> <a class="nav-link" href="#contact" tabindex="-1" aria-disabled="true">Contact</a></li>
@@ -141,10 +141,11 @@
       </div>
     </div>
   </div>
-  <div class="container-fluid info" id="portfolio">
+  <!-- <div class="container-fluid info" id="portfolio"> -->
+    <div class="container-fluid fh5co-recent-work" id="portfolio">
     <div class="container recent">
     <div class="row">
-      <h2 style="color: black;">Portfolios</h2>
+      <h2 style="color: white;">Portfolios</h2>
       <!-- recent work first row......start............................ -->
       <div class="owl-carousel owl-carousel2 owl-theme">
         <div>
@@ -466,8 +467,10 @@
       </div>
     </div>
   </div> -->
- 
-  <div class="container-fluid fh5co-about-me" id="testimonial">
+
+  <!-- ..................testimonial............................... -->
+
+  <!-- <div class="container-fluid fh5co-about-me" id="testimonial">
     <div id="my-carousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="card"> <img class="card-img d-block w-100" src="assets/img/about-me-img.jpg" alt="">
@@ -497,7 +500,7 @@
         <li data-target="#my-carousel" data-slide-to="2"> <img src="assets/img/about-me-img1.png" alt=""> <span>Sherrie Rose</span> </li>
       </ol>
     </div>
-  </div>
+  </div> -->
   <div class="container-fluid fh5co-insta-feed activity">
     <div class="container recent">
       <div class="row mb-5 pb-5">
