--- a/index.html
+++ b/index.html
@@ -330,6 +330,8 @@
     </div>
   </div>
   </div>
+  <!-- ..................acitivity............................... -->
+
   <!-- <div class="container-fluid recent fh5co-portfolio" id="services">
     <div class="container">
       <h2>Portfolios</h2>
