--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </div>
         <div>
           <div class="card"> <img style="height:420px;" class="card-img"src="assets/img/pf_8.webp" alt="">
-         <div class="card-img-overlay">   <a href="https://play.google.com/store/apps/details?id=com.amarlpg.orderlpgasinbangladesh">  <img style="height:50px;width:40px;" src="assets/img/play_store.png" class="heart" alt="heart icon">
+         <div class="card-img-overlay">   <a href="https://play.google.com/store/apps/details?id=com.mime.mimevc&hl=en">  <img style="height:50px;width:40px;" src="assets/img/play_store.png" class="heart" alt="heart icon">
               <div class="bottom-text">
                 <h5 class="card-title">MiME MEET</h5>
 
