--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="container contact-pop">
       <div class="row">
         <div class="col-md-6  pr-0">
-          <div class="card"> <img class="card-img w-100" style="height:500px;" src="assets/img/yousuf5.png" alt="">
+          <div class="card"> <img class="card-img w-100"  src="assets/img/yousuf4.jpeg" alt="">
             <div class="card-img-overlay"> </div>
           </div>
         </div>
@@ -524,12 +524,12 @@
           <h2>Facebook</h2>
           <div class="owl-carousel owl-carousel4 owl-theme">
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/yousuf.png" alt="">
+              <div class="card"> <img class="card-img" style="height: 200px;" src="assets/img/yousuf.png" alt="">
                 <div class="card-img-overlay"> </div>
               </div>
             </div>
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/yousuf1.jpg"  alt="">
+              <div class="card"> <img class="card-img" style="height: 200px;" src="assets/img/yousuf3.jpeg"  alt="">
                 <div class="card-img-overlay"> </div>
               </div>
             </div>
