--- a/index.html
+++ b/index.html
@@ -161,6 +161,18 @@
           </div>
         </div>
         <div>
+          <div class="card"> <img class="card-img"src="assets/img/rw_10.png" alt="">
+         <div class="card-img-overlay">   <a href="https://play.google.com/store/search?q=my+confidence+hr&c=apps&hl=en">  <img style="height:50px;width:40px;" src="assets/img/play_store.png" class="heart" alt="heart icon">
+              <div class="bottom-text">
+                <h5 class="card-title">My Confidence HR</h5>
+
+                <p class="card-text">“My Confidence HR” by Confidence Group (CG), a cutting-edge mobile application designed to enhance the HR service experience for CG employees.</p>
+              </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div>
           <div class="card"> <img class="card-img"src="assets/img/rw_8.png" alt="">
          <div class="card-img-overlay">   <a href="https://play.google.com/store/apps/details?id=jp.freelifegroup.gfs">  <img style="height:50px;width:40px;" src="assets/img/play_store.png" class="heart" alt="heart icon">
               <div class="bottom-text">
